@@ -15,20 +15,47 @@ version.read()
 datestr = version.datestr()
 vstring = version.version()
 
+targets = None
+
+def build_targets(str):
+	targets = {}
+	for itm in str.split(';'):
+		tmp = itm.split('=')
+		if len(tmp) == 0:
+			continue
+		elif len(tmp) == 1:
+			targets['nscp'] = tmp[0]
+		else:
+			targets[tmp[0]] = tmp[1]
+	return targets
+			
+	
+		
+def find_target(key=None):
+	global targets
+	if not targets:
+		targets = build_targets(TARGET_SITE)
+	if not key:
+		key = 'nscp'
+	if not key in targets:
+		return None
+	return targets[key]
+
+
 def scp_file(file):
 	tfile = os.path.basename(file)
 	(name, version, arch) = tfile.split('-')
 	target = None
 	if '_' in name:
 		(name, tag) = name.split('_')
-		if globals().has_key('TARGET_SITE_%s'%tag):
-			target = globals().get('TARGET_SITE_%s'%tag)
+		target = find_target(tag)
+		if target:
 			print 'Found tagged installer %s for %s'%(tfile, tag)
 		else:
 			print 'Ignoring unconfigured tagged installer: %s (define TARGET_SITE_%s to a destination)'%(tag,tag)
 	else:
 		print 'Found normal installer %s'%tfile
-		target = TARGET_SITE
+		target = find_target()
 	if target:
 		print 'Uploading name: %s to %s'%(tfile, target)
 		os.system("%s %s %s"%(SCP_BINARY, file, target))
