@@ -1,0 +1,125 @@
+#pragma once
+
+#include <string>
+#include <map>
+
+#include <boost/filesystem/path.hpp>
+#include <boost/filesystem/operations.hpp>
+
+#include <settings/settings_core.hpp>
+#include <settings/settings_core_impl.hpp>
+//#define SI_CONVERT_ICU
+#include <simpleini/simpleini.h>
+#include <error.hpp>
+
+namespace settings {
+	class settings_dummy : public settings::SettingsInterfaceImpl {
+	private:
+
+	public:
+		settings_dummy(settings::settings_core *core, std::wstring context) : settings::SettingsInterfaceImpl(core, context) {}
+		//////////////////////////////////////////////////////////////////////////
+		/// Create a new settings interface of "this kind"
+		///
+		/// @param context the context to use
+		/// @return the newly created settings interface
+		///
+		/// @author mickem
+		virtual SettingsInterfaceImpl* create_new_context(std::wstring context) {
+			return new settings_dummy(get_core(), context);
+		}
+		//////////////////////////////////////////////////////////////////////////
+		/// Get a string value if it does not exist exception will be thrown
+		///
+		/// @param path the path to look up
+		/// @param key the key to lookup
+		/// @return the string value
+		///
+		/// @author mickem
+		virtual std::wstring get_real_string(settings_core::key_path_type key) {
+			throw KeyNotFoundException(key);
+		}
+		//////////////////////////////////////////////////////////////////////////
+		/// Get an integer value if it does not exist exception will be thrown
+		///
+		/// @param path the path to look up
+		/// @param key the key to lookup
+		/// @return the int value
+		///
+		/// @author mickem
+		virtual int get_real_int(settings_core::key_path_type key) {
+			throw KeyNotFoundException(key);
+		}
+		//////////////////////////////////////////////////////////////////////////
+		/// Get a boolean value if it does not exist exception will be thrown
+		///
+		/// @param path the path to look up
+		/// @param key the key to lookup
+		/// @return the boolean value
+		///
+		/// @author mickem
+		virtual bool get_real_bool(settings_core::key_path_type key) {
+			throw KeyNotFoundException(key);
+		}
+		//////////////////////////////////////////////////////////////////////////
+		/// Check if a key exists
+		///
+		/// @param path the path to look up
+		/// @param key the key to lookup
+		/// @return true/false if the key exists.
+		///
+		/// @author mickem
+		virtual bool has_real_key(settings_core::key_path_type key) {
+			return false;
+		}
+		//////////////////////////////////////////////////////////////////////////
+		/// Write a value to the resulting context.
+		///
+		/// @param key The key to write to
+		/// @param value The value to write
+		///
+		/// @author mickem
+		virtual void set_real_value(settings_core::key_path_type key, conainer value) {
+		}
+
+		virtual void set_real_path(std::wstring path) {
+		}
+
+		//////////////////////////////////////////////////////////////////////////
+		/// Get all (sub) sections (given a path).
+		/// If the path is empty all root sections will be returned
+		///
+		/// @param path The path to get sections from (if empty root sections will be returned)
+		/// @param list The list to append nodes to
+		/// @return a list of sections
+		///
+		/// @author mickem
+		virtual void get_real_sections(std::wstring path, string_list &list) {
+		}
+		//////////////////////////////////////////////////////////////////////////
+		/// Get all keys given a path/section.
+		/// If the path is empty all root sections will be returned
+		///
+		/// @param path The path to get sections from (if empty root sections will be returned)
+		/// @param list The list to append nodes to
+		/// @return a list of sections
+		///
+		/// @author mickem
+		virtual void get_real_keys(std::wstring path, string_list &list) {
+		}
+		//////////////////////////////////////////////////////////////////////////
+		/// Save the settings store
+		///
+		/// @author mickem
+		virtual void save() {
+			SettingsInterfaceImpl::save();
+		}
+		virtual std::wstring get_info() {
+			return _T("dummy settings");
+		}
+		public:
+			static bool context_exists(settings::settings_core *core, std::wstring key) {
+				return true;
+			}
+	};
+}
